--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.14",
+    "multer": "^1.4.2",
     "nodemailer": "^6.6.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.7"
